Create a Custom cell

--- a/My-Hood/Base.lproj/Main.storyboard
+++ b/My-Hood/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="My_Hood" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,108 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qnu-Q3-rdX">
+                                <rect key="frame" x="20" y="63" width="560" height="517"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="diD-QC-KNx">
+                                        <rect key="frame" x="0.0" y="28" width="560" height="90"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="diD-QC-KNx" id="1mi-Lo-buS">
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="89"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Xg3-qe-mLm">
+                                                    <rect key="frame" x="8" y="10" width="70" height="70"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="70" id="6Xh-Rb-5Qj"/>
+                                                        <constraint firstAttribute="width" constant="70" id="L3p-MR-L5s"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Music man needs to go" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jFo-aE-KaY">
+                                                    <rect key="frame" x="86" y="10" width="466" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="E52-8w-i2E"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="Ps6-ou-l5t">
+                                                    <rect key="frame" x="86" y="34" width="466" height="47"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="47" id="WWj-R5-JVz"/>
+                                                    </constraints>
+                                                    <string key="text">Hey this neigbor is such a pink. He blast his korn music way to loud and im thinking about burning his house down and i wont have nothing to do with it</string>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-LightItalic" family="Helvetica Neue" pointSize="17"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="jFo-aE-KaY" firstAttribute="trailing" secondItem="1mi-Lo-buS" secondAttribute="trailingMargin" id="2XO-jh-Lxy"/>
+                                                <constraint firstItem="jFo-aE-KaY" firstAttribute="top" secondItem="1mi-Lo-buS" secondAttribute="topMargin" constant="2" id="32b-7N-9K3"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Xg3-qe-mLm" secondAttribute="bottom" constant="1" id="5Rb-HX-qeV"/>
+                                                <constraint firstItem="jFo-aE-KaY" firstAttribute="leading" secondItem="Xg3-qe-mLm" secondAttribute="trailing" constant="8" id="IIq-0M-WdB"/>
+                                                <constraint firstItem="Ps6-ou-l5t" firstAttribute="leading" secondItem="Xg3-qe-mLm" secondAttribute="trailing" constant="8" id="Nx7-Y7-LM2"/>
+                                                <constraint firstItem="Ps6-ou-l5t" firstAttribute="trailing" secondItem="1mi-Lo-buS" secondAttribute="trailingMargin" id="Ye0-AX-FZs"/>
+                                                <constraint firstItem="Xg3-qe-mLm" firstAttribute="leading" secondItem="1mi-Lo-buS" secondAttribute="leadingMargin" id="bzQ-dT-tiS"/>
+                                                <constraint firstItem="Xg3-qe-mLm" firstAttribute="top" secondItem="1mi-Lo-buS" secondAttribute="topMargin" constant="2" id="gUa-5e-56R"/>
+                                                <constraint firstItem="Ps6-ou-l5t" firstAttribute="top" secondItem="jFo-aE-KaY" secondAttribute="bottom" constant="3" id="ilA-9p-6qZ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lzu-No-jXC">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="55"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WOA-Mh-sAL">
+                                        <rect key="frame" x="563" y="24" width="29" height="23"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="29" id="4Px-fn-WGD"/>
+                                            <constraint firstAttribute="height" constant="23" id="xUb-af-n04"/>
+                                        </constraints>
+                                        <state key="normal" image="camera"/>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bannerlogo" translatesAutoresizingMaskIntoConstraints="NO" id="Nkk-Pk-XQa">
+                                        <rect key="frame" x="240" y="8" width="121" height="38"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="38" id="7gU-Mu-VAG"/>
+                                            <constraint firstAttribute="width" constant="121" id="Heo-pR-Yup"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.1803921568627451" green="0.52941176470588236" blue="0.76470588235294112" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="Nkk-Pk-XQa" secondAttribute="bottom" constant="9" id="3GE-la-Lhw"/>
+                                    <constraint firstItem="Nkk-Pk-XQa" firstAttribute="centerX" secondItem="lzu-No-jXC" secondAttribute="centerX" id="8yJ-ot-OqT"/>
+                                    <constraint firstAttribute="trailing" secondItem="WOA-Mh-sAL" secondAttribute="trailing" constant="8" id="Bzt-RD-yDc"/>
+                                    <constraint firstAttribute="height" constant="55" id="YXe-So-eIE"/>
+                                    <constraint firstAttribute="bottom" secondItem="WOA-Mh-sAL" secondAttribute="bottom" constant="8" id="dKi-Sj-RhX"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="qnu-Q3-rdX" secondAttribute="trailing" constant="20" id="1rU-fc-PKI"/>
+                            <constraint firstItem="qnu-Q3-rdX" firstAttribute="top" secondItem="lzu-No-jXC" secondAttribute="bottom" constant="8" id="3YO-q4-yns"/>
+                            <constraint firstAttribute="trailing" secondItem="lzu-No-jXC" secondAttribute="trailing" id="WDK-I5-LtZ"/>
+                            <constraint firstItem="qnu-Q3-rdX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="ZHu-28-dcP"/>
+                            <constraint firstItem="lzu-No-jXC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ild-Zk-yTc"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="qnu-Q3-rdX" secondAttribute="bottom" constant="20" id="ma9-Qg-XKw"/>
+                            <constraint firstItem="lzu-No-jXC" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="oHE-I3-YdG"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="350" y="473"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bannerlogo" width="518" height="194"/>
+        <image name="camera" width="100" height="77"/>
+    </resources>
 </document>
