--- a/My-Hood/Base.lproj/Main.storyboard
+++ b/My-Hood/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="20" y="63" width="560" height="517"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="diD-QC-KNx">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="90" id="diD-QC-KNx" customClass="PostCell" customModule="My_Hood" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="560" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="diD-QC-KNx" id="1mi-Lo-buS">
@@ -68,8 +68,17 @@
                                                 <constraint firstItem="Ps6-ou-l5t" firstAttribute="top" secondItem="jFo-aE-KaY" secondAttribute="bottom" constant="3" id="ilA-9p-6qZ"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="descLbl" destination="Ps6-ou-l5t" id="UAY-vg-FgZ"/>
+                                            <outlet property="postImg" destination="Xg3-qe-mLm" id="hrE-mV-3YA"/>
+                                            <outlet property="titleLbl" destination="jFo-aE-KaY" id="npj-NT-aYj"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="9zO-RK-Zvg"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="fzT-DO-v1G"/>
+                                </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lzu-No-jXC">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="55"/>
@@ -81,6 +90,9 @@
                                             <constraint firstAttribute="height" constant="23" id="xUb-af-n04"/>
                                         </constraints>
                                         <state key="normal" image="camera"/>
+                                        <connections>
+                                            <segue destination="Io2-yu-ydj" kind="show" identifier="AddPostVC" id="3YN-PM-wvD"/>
+                                        </connections>
                                     </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bannerlogo" translatesAutoresizingMaskIntoConstraints="NO" id="Nkk-Pk-XQa">
                                         <rect key="frame" x="240" y="8" width="121" height="38"/>
@@ -111,10 +123,31 @@
                             <constraint firstItem="lzu-No-jXC" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="oHE-I3-YdG"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="qnu-Q3-rdX" id="ocb-ol-4nF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="350" y="473"/>
+        </scene>
+        <!--Add PostVC-->
+        <scene sceneID="VVH-6g-7c8">
+            <objects>
+                <viewController id="Io2-yu-ydj" customClass="AddPostVC" customModule="My_Hood" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qVt-2Y-7da"/>
+                        <viewControllerLayoutGuide type="bottom" id="fSi-xh-SyT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="MgW-XH-CDl">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hGo-BM-Sx9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="999" y="473"/>
         </scene>
     </scenes>
     <resources>
